intermediate mass commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# AutoVR.ai
+checkpoints
+source*/
+target*/
+image*/
+video*/
+input*/
+output*/
+deovr
+website
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
