new cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,12 +40,14 @@
         "ndarray",
         "njit",
         "numba",
+        "opencv",
         "polyline",
         "polylines",
         "prange",
         "rasterizes",
         "rasterizing",
         "resizer",
+        "torchvision",
         "tqdm",
         "trange",
         "videofile",
