added missing package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "rasterizes",
         "rasterizing",
         "resizer",
+        "scipy",
         "torchvision",
         "tqdm",
         "trange",
