--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 # let me know if i've missed anything
 gradio
 jsonschema
+matplotlib
 numba
 numpy
 opencv-python
 Pillow
 scipy
+timm==0.6.13
 torch
 torchvision
 tqdm
