major update, initial GUI support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "hstack",
         "imread",
         "imwrite",
+        "inbrowser",
         "Jorden",
         "jsonschema",
         "kitti",
