--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,11 +17,13 @@
         "autovrai",
         "cmap",
         "cuda",
+        "deovr",
         "depthmap",
         "depthmaps",
         "depthraw",
         "depthraws",
         "devs",
+        "DGRAM",
         "dtype",
         "esbenp",
         "fastmath",
